--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
+@import "fumadocs-ui/css/neutral.css";
 @import "fumadocs-ui/css/vitepress.css";
-@import "fumadocs-ui/css/preset.css";
 @import "@fuma-comment/react/preset.css";
 
 @plugin "tailwindcss-animate";
@@ -226,3 +226,13 @@
     }
   }
 }
+/* 
+@media (prefers-reduced-motion: no-preference) {
+  ::view-transition-old(.slow-fade) {
+    animation-duration: 500ms;
+  }
+
+  ::view-transition-new(.slow-fade) {
+    animation-duration: 500ms;
+  }
+} */
