feat: enhance guestbook and blog components with view transitions and improved styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -118,14 +118,16 @@
 
 @layer utilities {
   .bg-dashed {
-    background-image: linear-gradient(45deg,
-        var(--color-border) 12.50%,
-        transparent 12.50%,
-        transparent 50%,
-        var(--color-border) 50%,
-        var(--color-border) 62.50%,
-        transparent 62.50%,
-        transparent 100%);
+    background-image: linear-gradient(
+      45deg,
+      var(--color-border) 12.50%,
+      transparent 12.50%,
+      transparent 50%,
+      var(--color-border) 50%,
+      var(--color-border) 62.50%,
+      transparent 62.50%,
+      transparent 100%
+    );
     background-size: 0.25rem 0.25rem;
   }
 
@@ -177,8 +179,10 @@
     background-image: radial-gradient(transparent 1px, rgb(255, 255, 255) 1px);
     background-size: 4px 4px;
     backdrop-filter: blur(3px);
-    mask: linear-gradient(rgba(255, 255, 255, 0) 0%,
-        rgb(255, 255, 255, 0.6) 100%);
+    mask: linear-gradient(
+      rgba(255, 255, 255, 0) 0%,
+      rgb(255, 255, 255, 0.6) 100%
+    );
     opacity: 1;
     position: absolute;
     inset: 0;
@@ -190,13 +194,17 @@
   .footer-gradient {
     position: absolute;
     inset: 0;
-    background-image: linear-gradient(rgba(255, 255, 255, 0) 0% 50%,
-        rgba(255, 255, 255, 0.5) 100%);
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0) 0% 50%,
+      rgba(255, 255, 255, 0.5) 100%
+    );
   }
 
   .dark .footer-gradient {
-    background-image: linear-gradient(rgba(0, 0, 0, 0) 0% 50%,
-        rgba(0, 0, 0, 0.5) 100%);
+    background-image: linear-gradient(
+      rgba(0, 0, 0, 0) 0% 50%,
+      rgba(0, 0, 0, 0.5) 100%
+    );
   }
 
   .dark .footer-grid {
@@ -257,5 +265,23 @@
   /* util for faster than default (250ms) transitions. Typically used to make exits faster so they don't visually overlap with enters */
   ::view-transition-group(.duration-100) {
     animation-duration: 100ms;
+  }
+
+  @keyframes via-blur {
+    30% {
+      filter: blur(10px);
+    }
+  }
+
+  ::view-transition-image-pair(.via-blur) {
+    animation-name: via-blur;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  ::view-transition-group(*),
+  ::view-transition-old(*),
+  ::view-transition-new(*) {
+    animation: none !important;
   }
 }
