--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,14 +58,17 @@
     from {
       height: 0;
     }
+
     to {
       height: var(--radix-accordion-content-height);
     }
   }
+
   @keyframes accordion-up {
     from {
       height: var(--radix-accordion-content-height);
     }
+
     to {
       height: 0;
     }
@@ -240,14 +243,37 @@
       clip-path: inset(0 0 0 0);
     }
   }
-}
-/* 
-@media (prefers-reduced-motion: no-preference) {
-  ::view-transition-old(.slow-fade) {
-    animation-duration: 500ms;
+
+  @keyframes reveal {
+    0% {
+      scale: 0.8;
+      opacity: 0;
+      translate: 0 4lh;
+      filter: blur(20px);
+    }
   }
 
-  ::view-transition-new(.slow-fade) {
-    animation-duration: 500ms;
+  ::view-transition-new(.page-enter):only-child {
+    animation-name: reveal;
   }
-} */
+
+  ::view-transition-old(.page-exit):only-child {
+    animation-name: reveal;
+    animation-direction: reverse;
+  }
+
+  /* util for faster than default (250ms) transitions. Typically used to make exits faster so they don't visually overlap with enters */
+  ::view-transition-group(.duration-100) {
+    animation-duration: 100ms;
+  }
+
+  @keyframes via-blur {
+    30% {
+      filter: blur(10px);
+    }
+  }
+
+  ::view-transition-image-pair(.via-blur) {
+    animation-name: via-blur;
+  }
+}
