--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import "fumadocs-ui/css/preset.css";
 @import "fumadocs-ui/css/neutral.css";
 @import "@fuma-comment/react/preset.css";
+@import "@daveyplate/better-auth-ui/css";
 
 @plugin "tailwindcss-animate";
 @plugin "tailwind-scrollbar";
